PDF completo e outras melhorias
