# src/main/java/br/jus/trf2/siga/ex/api/ISigaDoc.java
@@ -66,47 +66,58 @@ public interface ISigaDoc {
 	}
 
 	public interface IMesaGet extends ISwaggerMethod {
-		public void run(MesaGetRequest req, MesaGetResponse resp) throws Exception;
+		public void run(MesaGetRequest req, MesaGetResponse resp)
+				throws Exception;
 	}
 
 	public class DocSiglaGetRequest implements ISwaggerRequest {
 		public String sigla;
 	}
 
-	public class DocSiglaGetResponse implements ISwaggerResponse, ISwaggerResponseFile {
+	public class DocSiglaGetResponse implements ISwaggerResponse,
+			ISwaggerResponseFile {
 		public String contenttype = "application/pdf";
 		public String contentdisposition = "attachment";
 
 		public Long contentlength;
 		public InputStream inputstream;
+
 		public String getContenttype() {
 			return contenttype;
 		}
+
 		public void setContenttype(String contenttype) {
 			this.contenttype = contenttype;
 		}
+
 		public String getContentdisposition() {
 			return contentdisposition;
 		}
+
 		public void setContentdisposition(String contentdisposition) {
 			this.contentdisposition = contentdisposition;
 		}
+
 		public Long getContentlength() {
 			return contentlength;
 		}
+
 		public void setContentlength(Long contentlength) {
 			this.contentlength = contentlength;
 		}
+
 		public InputStream getInputstream() {
 			return inputstream;
 		}
+
 		public void setInputstream(InputStream inputstream) {
 			this.inputstream = inputstream;
 		}
 	}
 
 	public interface IDocSiglaGet extends ISwaggerMethod {
-		public void run(DocSiglaGetRequest req, DocSiglaGetResponse resp) throws Exception;
+		public void run(DocSiglaGetRequest req, DocSiglaGetResponse resp)
+				throws Exception;
 	}
 
 	public class DocSiglaPdfGetRequest implements ISwaggerRequest {
@@ -118,20 +129,21 @@ public interface ISigaDoc {
 	}
 
 	public interface IDocSiglaPdfGet extends ISwaggerMethod {
-		public void run(DocSiglaPdfGetRequest req, DocSiglaPdfGetResponse resp) throws Exception;
+		public void run(DocSiglaPdfGetRequest req, DocSiglaPdfGetResponse resp)
+				throws Exception;
 	}
 
 	public class DocSiglaPdfCompletoGetRequest implements ISwaggerRequest {
 		public String sigla;
 	}
 
-	public class DocSiglaPdfCompletoGetResponse implements ISwaggerResponse, ISwaggerResponsePayload {
-		public byte[] payload;
-		public String contenttype;
+	public class DocSiglaPdfCompletoGetResponse implements ISwaggerResponse {
+		public String jwt;
 	}
 
 	public interface IDocSiglaPdfCompletoGet extends ISwaggerMethod {
-		public void run(DocSiglaPdfCompletoGetRequest req, DocSiglaPdfCompletoGetResponse resp) throws Exception;
+		public void run(DocSiglaPdfCompletoGetRequest req,
+				DocSiglaPdfCompletoGetResponse resp) throws Exception;
 	}
 
 	public class DocSiglaMovIdPdfGetRequest implements ISwaggerRequest {
@@ -144,7 +156,8 @@ public interface ISigaDoc {
 	}
 
 	public interface IDocSiglaMovIdPdfGet extends ISwaggerMethod {
-		public void run(DocSiglaMovIdPdfGetRequest req, DocSiglaMovIdPdfGetResponse resp) throws Exception;
+		public void run(DocSiglaMovIdPdfGetRequest req,
+				DocSiglaMovIdPdfGetResponse resp) throws Exception;
 	}
 
 	public class DownloadJwtFilenameGetRequest implements ISwaggerRequest {
@@ -153,40 +166,50 @@ public interface ISigaDoc {
 		public String disposition;
 	}
 
-	public class DownloadJwtFilenameGetResponse implements ISwaggerResponse, ISwaggerResponseFile {
+	public class DownloadJwtFilenameGetResponse implements ISwaggerResponse,
+			ISwaggerResponseFile {
 		public String contenttype = "application/pdf";
 		public String contentdisposition = "attachment";
 
 		public Long contentlength;
 		public InputStream inputstream;
+
 		public String getContenttype() {
 			return contenttype;
 		}
+
 		public void setContenttype(String contenttype) {
 			this.contenttype = contenttype;
 		}
+
 		public String getContentdisposition() {
 			return contentdisposition;
 		}
+
 		public void setContentdisposition(String contentdisposition) {
 			this.contentdisposition = contentdisposition;
 		}
+
 		public Long getContentlength() {
 			return contentlength;
 		}
+
 		public void setContentlength(Long contentlength) {
 			this.contentlength = contentlength;
 		}
+
 		public InputStream getInputstream() {
 			return inputstream;
 		}
+
 		public void setInputstream(InputStream inputstream) {
 			this.inputstream = inputstream;
 		}
 	}
 
 	public interface IDownloadJwtFilenameGet extends ISwaggerMethod {
-		public void run(DownloadJwtFilenameGetRequest req, DownloadJwtFilenameGetResponse resp) throws Exception;
+		public void run(DownloadJwtFilenameGetRequest req,
+				DownloadJwtFilenameGetResponse resp) throws Exception;
 	}
 
 	public class DocSiglaAssinarComSenhaPostRequest implements ISwaggerRequest {
@@ -195,12 +218,14 @@ public interface ISigaDoc {
 		public String password;
 	}
 
-	public class DocSiglaAssinarComSenhaPostResponse implements ISwaggerResponse {
+	public class DocSiglaAssinarComSenhaPostResponse implements
+			ISwaggerResponse {
 		public String status;
 	}
 
 	public interface IDocSiglaAssinarComSenhaPost extends ISwaggerMethod {
-		public void run(DocSiglaAssinarComSenhaPostRequest req, DocSiglaAssinarComSenhaPostResponse resp) throws Exception;
+		public void run(DocSiglaAssinarComSenhaPostRequest req,
+				DocSiglaAssinarComSenhaPostResponse resp) throws Exception;
 	}
 
 	public class DocSiglaTramitarPostRequest implements ISwaggerRequest {
@@ -214,7 +239,8 @@ public interface ISigaDoc {
 	}
 
 	public interface IDocSiglaTramitarPost extends ISwaggerMethod {
-		public void run(DocSiglaTramitarPostRequest req, DocSiglaTramitarPostResponse resp) throws Exception;
+		public void run(DocSiglaTramitarPostRequest req,
+				DocSiglaTramitarPostResponse resp) throws Exception;
 	}
 
 	public class DocSiglaAnotarPostRequest implements ISwaggerRequest {
@@ -227,7 +253,8 @@ public interface ISigaDoc {
 	}
 
 	public interface IDocSiglaAnotarPost extends ISwaggerMethod {
-		public void run(DocSiglaAnotarPostRequest req, DocSiglaAnotarPostResponse resp) throws Exception;
+		public void run(DocSiglaAnotarPostRequest req,
+				DocSiglaAnotarPostResponse resp) throws Exception;
 	}
 
 	public class DocSiglaPesquisarSiglaGetRequest implements ISwaggerRequest {
@@ -241,7 +268,8 @@ public interface ISigaDoc {
 	}
 
 	public interface IDocSiglaPesquisarSiglaGet extends ISwaggerMethod {
-		public void run(DocSiglaPesquisarSiglaGetRequest req, DocSiglaPesquisarSiglaGetResponse resp) throws Exception;
+		public void run(DocSiglaPesquisarSiglaGetRequest req,
+				DocSiglaPesquisarSiglaGetResponse resp) throws Exception;
 	}
 
 	public class SugestaoPostRequest implements ISwaggerRequest {
@@ -255,7 +283,8 @@ public interface ISigaDoc {
 	}
 
 	public interface ISugestaoPost extends ISwaggerMethod {
-		public void run(SugestaoPostRequest req, SugestaoPostResponse resp) throws Exception;
+		public void run(SugestaoPostRequest req, SugestaoPostResponse resp)
+				throws Exception;
 	}
 
 	public class TokenCriarPostRequest implements ISwaggerRequest {
@@ -268,7 +297,8 @@ public interface ISigaDoc {
 	}
 
 	public interface ITokenCriarPost extends ISwaggerMethod {
-		public void run(TokenCriarPostRequest req, TokenCriarPostResponse resp) throws Exception;
+		public void run(TokenCriarPostRequest req, TokenCriarPostResponse resp)
+				throws Exception;
 	}
 
 }
